<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="@android:color/white"
              android:paddingBottom="10dip">

    <TextView android:id="@+id/favorites_dialog_title"
              android:background="@drawable/blue_vertical_shape"
              android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:paddingTop="8dip" android:paddingBottom="8dip"
              android:gravity="center"
              android:textColor="@android:color/white"
              android:textSize="23sp"
              android:text="@string/favorites_dialog_title_full"/>

    <RelativeLayout android:id="@+id/favorites_dialog_bar"
                    android:background="@drawable/black_vertical_shape"
                    android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:paddingTop="1dip" android:paddingBottom="1dip"
                    android:paddingLeft="5dip" android:paddingRight="5dip">

        <TextView android:id="@+id/favorites_dialog_bar_left"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:textSize="12sp"
                  android:textColor="@android:color/white"
                  android:text="@string/favorites_dialog_bar_left"/>

        <TextView android:id="@+id/favorites_dialog_bar_right"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_alignParentRight="true"
                  android:textSize="12sp"
                  android:textColor="@android:color/white"
                  android:text="@string/favorites_dialog_bar_right"/>
    </RelativeLayout>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
                  android:orientation="vertical"
                  android:layout_weight="1">

        <TextView android:id="@+id/favorites_dialog_fav_bar"
                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:paddingLeft="8dip"
                  android:background="#b2bbc2"
                  android:textColor="@android:color/white"
                  android:textStyle="bold"
                  android:textSize="14sp"
                  android:text="Favoris"/>

        <ListView android:id="@+id/favorites_dialog_list_fav"
                  android:layout_width="fill_parent" android:layout_height="fill_parent"
                  android:divider="#DCDCDD"
                  android:dividerHeight="1dip"
                  android:visibility="gone"/>

        <TextView android:id="@+id/favorites_dialog_fav_message"
                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="10dip" android:layout_marginBottom="10dip"
                  android:layout_marginLeft="8dip"
                  android:textColor="@android:color/black"
                  android:textSize="15sp"
                  android:text="@string/favorites_dialog_loading_favs"/>

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
                  android:orientation="vertical"
                  android:layout_weight="1">

        <TextView android:id="@+id/favorites_dialog_alert_bar"
                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:paddingLeft="8dip"
                  android:background="#b2bbc2"
                  android:textColor="@android:color/white"
                  android:textStyle="bold"
                  android:textSize="14sp"
                  android:text="Alertes"/>

        <ListView android:id="@+id/favorites_dialog_list_alert"
                  android:layout_width="fill_parent" android:layout_height="fill_parent"
                  android:divider="#DCDCDD"
                  android:dividerHeight="1dip"
                  android:visibility="gone"/>

        <TextView android:id="@+id/favorites_dialog_alert_message"
                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="10dip" android:layout_marginBottom="10dip"
                  android:layout_marginLeft="8dip"
                  android:textColor="@android:color/black"
                  android:textSize="15sp"
                  android:text="@string/favorites_dialog_loading_alerts"/>
    </LinearLayout>

</LinearLayout>